# boba

./: .gitignore  Cargo.toml  devenv.nix  icon.ascii  readme.md
examples/: hello_layout.rs  layout.rs
src/: animator.rs  events.rs  lib.rs  surface.rs  theme.rs
src/components/: asciiimg.rs  badge.rs  bigtext.rs  block.rs  border.rs  button.rs  canvas.rs  effect.rs  filepicker.rs  form.rs  help.rs  input.rs  layer.rs  layout.rs  list.rs  mod.rs  modal.rs  paginator.rs  pattern.rs  powerline.rs  progress.rs  reactive.rs  spinner.rs  stopwatch.rs  style.rs  syntax.rs  table.rs  tabs.rs  textarea.rs  toast.rs  tree.rs  viewport.rs
